--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -1414,15 +1414,15 @@
       },
       "outputs": [],
       "source": [
-        "# Find highest revenue for each row\n",
+        "# Find highest revenue for each school\n",
         "revenue_cols = ['fiber_net_revenue', 'p2area_net_revenue', 'p2p_net_revenue', 'satellite_net_revenue']\n",
         "net_revenues['technology'] = net_revenues[revenue_cols].idxmax(axis=1).str.replace('_net_revenue', '')\n",
         "\n",
-        "# If all revenues are NaN, set selected_technology to NaN\n",
+        "# If all revenues are missing, set selected_technology to missing\n",
         "mask = net_revenues[revenue_cols].isna().all(axis=1)\n",
         "net_revenues.loc[mask, 'technology'] = np.nan\n",
         "\n",
-        "# Merge costs\n",
+        "# Merge costs into revenue DataFrame\n",
         "net_revenues = pd.merge(net_revenues.reset_index(), costs, on='technology', how='left').set_index(\"school_id\")"
       ]
     },
