--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -22,6 +22,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "In this notebook, we will:\n",
+        "\n",
+        "- Load the results from our previous exercises done on QGIS\n",
+        "- Asssess which technologies are feasible for each school\n",
+        "- Estimate the cost (CAPEX and OPEX) of connecting schools with each technology\n",
+        "- Select the option among those feasible that maximizes operator net revenue\n",
+        "- Display the technology assignment results\n",
+        "- Display the costs and revenues for this solution"
+      ],
+      "metadata": {
+        "id": "UZfFGOmB308J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Questions"
       ],
       "metadata": {
@@ -46,7 +62,7 @@
         "id": "bl_KaWBNiZ3m"
       },
       "source": [
-        "## Setting up our environment"
+        "## Setting up our Python environment"
       ]
     },
     {
@@ -66,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "jKsfdjwriZ3n"
       },
@@ -88,26 +104,6 @@
         "# Notebook interaction and display\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "x1f6_6hj1kbe"
-      },
-      "source": [
-        "The option `display_folium` controls whether to display interactive maps, which can be heavy and prevent the markdown file from displaying correctly."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {
-        "id": "XGZCT7zO1kbf"
-      },
-      "outputs": [],
-      "source": [
-        "display_folium = True"
       ]
     },
     {
@@ -190,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -436,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "RcDGy5-qiZ3q"
       },
@@ -448,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -816,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "tpc-5GcriZ3q"
       },
@@ -832,7 +828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1153,7 +1149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1235,7 +1231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "Lqwr63ZRiZ3r"
       },
@@ -1282,7 +1278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "qc9Pofm1iZ3r"
       },
@@ -1304,7 +1300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1358,7 +1354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1431,7 +1427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "Hjrx65gblLhq",
         "colab": {
@@ -1464,7 +1460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1844,7 +1840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1885,7 +1881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1933,7 +1929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "O1_7bukRiZ3s"
@@ -2002,7 +1998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "ZKQmxy23iZ3s"
       },
@@ -2013,7 +2009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -34376,6 +34372,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
