--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -438,6 +438,7 @@
       },
       "outputs": [],
       "source": [
+        "# The results from our previous analysis are stored in a public ITU account\n",
         "merged_results = gpd.read_file(\"https://zstagigaprodeuw1.blob.core.windows.net/gigainframapkit-public-container/namibia/merged_namibia.geojson\")\n",
         "merged_results = merged_results.set_index(\"school_id\")"
       ]
@@ -1288,6 +1289,30 @@
         "for tech in ['fiber', 'p2area', 'p2p', 'satellite']:\n",
         "    net_revenues.loc[~feasibility[f'{tech}_feasible'], f'{tech}_net_revenue'] = np.nan"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display costs\n",
+        "costs"
+      ],
+      "metadata": {
+        "id": "f8dP6YeR5eGc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display net revenues\n",
+        "net_revenues.head()"
+      ],
+      "metadata": {
+        "id": "b8p54a245jt2"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -34363,9 +34388,8 @@
         }
       ],
       "source": [
-        "if display_folium:\n",
-        "  m = plot_points_by_technology(technology_selection, color_map, title=\"Schools by Selected Technology\", zoom=6)\n",
-        "  display(m)"
+        "m = plot_points_by_technology(technology_selection, color_map, title=\"Schools by Selected Technology\", zoom=6)\n",
+        "display(m)"
       ]
     }
   ],
