--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -82,8 +82,8 @@
       "source": [
         "We import Python libraries needed for our cost analysis:\n",
         "\n",
-        "- Data tools (`pandas`, `numpy`) for calculations\n",
-        "- Geographic tools (`geopandas`) for mapping\n",
+        "- Computing libraries (`pandas`, `numpy`) for calculations\n",
+        "- GIS libraries (`geopandas`) for mapping\n",
         "- Visualization libraries (`matplotlib`, `folium`, `seaborn`) for creating graphs and maps\n",
         "\n",
         "These will help us analyze and visualize the costs of different connectivity options."
@@ -199,7 +199,7 @@
         "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 239,
+          "height": 271,
           "referenced_widgets": [
             "220f41c718dd4388b0c171e1781ef9c1",
             "9dd13bc1366e4ae588c87232244d26e5",
@@ -1283,7 +1283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 26,
       "metadata": {
         "id": "Lqwr63ZRiZ3r"
       },
@@ -34906,7 +34906,7 @@
               "IPY_MODEL_640d100019dd483184e521b217feae01"
             ],
             "layout": "IPY_MODEL_516da9b9a1644e39967315d470a5d765",
-            "selected_index": 4
+            "selected_index": 1
           }
         },
         "9dd13bc1366e4ae588c87232244d26e5": {
