--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -47,27 +47,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2xTGTQkbWf_c"
-      },
-      "source": [
-        "## Knowledge check"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "d9UwFO59X_TE"
-      },
-      "source": [
-        "- Describe how a technology is selected for each school.\n",
-        "- What geographical patterns can you see in the technological assignment?\n",
-        "- If satellite becomes not feasible for all schools in the country, what will the new repartition of technologies be?\n",
-        "- If the maximum length of fiber line allowed is 1km, what will the new repartition of technologies be?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "bl_KaWBNiZ3m"
       },
       "source": [
@@ -34850,6 +34829,87 @@
         "m = plot_points_by_technology(technology_selection, color_map, None, title=\"Schools by Selected Technology\", zoom=6)\n",
         "display(m)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2xTGTQkbWf_c"
+      },
+      "source": [
+        "## Knowledge check"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Describe how a technology was selected for each school.\n"
+      ],
+      "metadata": {
+        "id": "jdVlwy3Z0A2c"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "..."
+      ],
+      "metadata": {
+        "id": "DjgTm3xU0I0I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> What geographical patterns can you see in the final technological assignment?"
+      ],
+      "metadata": {
+        "id": "0WBbKR5M0W6t"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "..."
+      ],
+      "metadata": {
+        "id": "-3BeiNDs0dkP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> If satellite became *not feasible* for all schools in the country, what would the new repartition of technologies be?"
+      ],
+      "metadata": {
+        "id": "wxbuuz480eyH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "..."
+      ],
+      "metadata": {
+        "id": "pjPN7xOE0tgy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d9UwFO59X_TE"
+      },
+      "source": [
+        ">  If the maximum length of fiber line allowed was 1km, what would the new repartition of technologies be?\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "..."
+      ],
+      "metadata": {
+        "id": "x4fr3ZfH03f3"
+      }
     }
   ],
   "metadata": {
