--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -178,7 +178,7 @@
         "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 271,
+          "height": 239,
           "referenced_widgets": [
             "220f41c718dd4388b0c171e1781ef9c1",
             "9dd13bc1366e4ae588c87232244d26e5",
@@ -34878,7 +34878,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> If satellite became *not feasible* for all schools in the country, what would the new repartition of technologies be?"
+        "> If satellite became *not feasible* for all schools in the country, what would the new technological assignment be?"
       ],
       "metadata": {
         "id": "wxbuuz480eyH"
@@ -34899,7 +34899,7 @@
         "id": "d9UwFO59X_TE"
       },
       "source": [
-        ">  If the maximum length of fiber line allowed was 1km, what would the new repartition of technologies be?\n"
+        ">  If the maximum length of fiber line allowed was 1km, what would the new technological assignment be?\n"
       ]
     },
     {
@@ -34966,7 +34966,7 @@
               "IPY_MODEL_640d100019dd483184e521b217feae01"
             ],
             "layout": "IPY_MODEL_516da9b9a1644e39967315d470a5d765",
-            "selected_index": 1
+            "selected_index": 4
           }
         },
         "9dd13bc1366e4ae588c87232244d26e5": {
