refactor cost_modelling.ipynb to directly access ARPU, CAPEX, and OPEX values for various technologies

--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -349,9 +349,19 @@
         "# Convert to scalars\n",
         "user_ratio = users_per_pop.value / 100\n",
         "years = num_years.value\n",
-        "\n",
-        "# Ensure 'max_length' exists before accessing\n",
-        "fiber_max_length = tech_controls['fiber'].get('max_length', widgets.FloatSlider()).value\n",
+        "fiber_max_length = tech_controls['fiber']['max_length'].value\n",
+        "fiber_arpu = tech_controls['fiber']['ARPU'].value\n",
+        "p2area_arpu = tech_controls['p2area']['ARPU'].value\n",
+        "p2p_arpu = tech_controls['p2p']['ARPU'].value\n",
+        "satellite_arpu = tech_controls['satellite']['ARPU'].value\n",
+        "fiber_capex = tech_controls['fiber']['CAPEX'].value\n",
+        "p2area_capex = tech_controls['p2area']['CAPEX'].value\n",
+        "p2p_capex = tech_controls['p2p']['CAPEX'].value\n",
+        "satellite_capex = tech_controls['satellite']['CAPEX'].value\n",
+        "fiber_opex = tech_controls['fiber']['OPEX'].value\n",
+        "p2area_opex = tech_controls['p2area']['OPEX'].value\n",
+        "p2p_opex = tech_controls['p2p']['OPEX'].value\n",
+        "satellite_opex = tech_controls['satellite']['OPEX'].value\n",
         "\n",
         "# Display the tab layout\n",
         "display(tab)"
