refactor cost_modelling.ipynb to improve clarity of revenue and cost calculations

--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -1279,27 +1279,24 @@
         "net_revenues = merged_results.copy()\n",
         "\n",
         "# FIBER CALCULATIONS\n",
-        "# Calculate yearly revenue: monthly fee × number of users (population × users per 100 residents)\n",
+        "  # Calculate yearly revenue: monthly fee × number of users (population × users per 100 residents)\n",
         "fiber_annual_revenue = fiber_arpu * merged_results[\"population_1km\"] * user_ratio\n",
-        "# Calculate total costs: one-time setup cost + (yearly OPEX × number of years)\n",
+        "  # Calculate total costs: one-time setup cost + (yearly OPEX × number of years)\n",
         "fiber_total_costs = fiber_capex + fiber_opex * years\n",
-        "# Calculate profit: (yearly revenue × number of years) - total costs\n",
+        "  # Calculate profit: (yearly revenue × number of years) - total costs\n",
         "net_revenues[\"fiber_net_revenue\"] = fiber_annual_revenue * years - fiber_total_costs\n",
         "\n",
         "# CELLULAR (P2AREA) CALCULATIONS\n",
-        "# Same calculations as fiber, but with cellular-specific values\n",
         "cellular_annual_revenue = p2area_arpu * merged_results[\"population_1km\"] * user_ratio\n",
         "cellular_total_costs = p2area_capex + p2area_opex * years\n",
         "net_revenues[\"p2area_net_revenue\"] = cellular_annual_revenue * years - cellular_total_costs\n",
         "\n",
         "# POINT-TO-POINT (P2P) CALCULATIONS\n",
-        "# Same calculations as above, but for point-to-point technology\n",
         "p2p_annual_revenue = p2p_arpu * merged_results[\"population_1km\"] * user_ratio\n",
         "p2p_total_costs = p2p_capex + p2p_opex * years\n",
         "net_revenues[\"p2p_net_revenue\"] = p2p_annual_revenue * years - p2p_total_costs\n",
         "\n",
         "# SATELLITE CALCULATIONS\n",
-        "# Same calculations as above, but for satellite technology\n",
         "satellite_annual_revenue = satellite_arpu * merged_results[\"population_1km\"] * user_ratio\n",
         "satellite_total_costs = satellite_capex + satellite_opex * years\n",
         "net_revenues[\"satellite_net_revenue\"] = satellite_annual_revenue * years - satellite_total_costs\n",
@@ -1775,8 +1772,8 @@
         }
       ],
       "source": [
-        "# @title Figure: Revenues by Technology\n",
-        "# Box plot of revenues by technology\n",
+        "# @title Figure: Net Revenues by Technology\n",
+        "# Box plot of net revenues by technology\n",
         "data = net_revenues[['fiber_net_revenue', 'p2area_net_revenue', 'p2p_net_revenue', 'satellite_net_revenue']].melt(\n",
         "   var_name='Technology',\n",
         "   value_name='Revenue'\n",
@@ -1792,8 +1789,8 @@
         "\n",
         "sns.stripplot(x='Technology', y='Revenue', data=data, alpha=0.5, jitter=True, palette=color_map, hue='Technology')\n",
         "plt.xlabel('')\n",
-        "plt.ylabel('Revenue (USD) over Planning Period')\n",
-        "plt.title('Distribution of Revenues by Technology')\n",
+        "plt.ylabel('Net Revenue (USD) over Planning Period')\n",
+        "plt.title('Distribution of Net Revenues by Technology')\n",
         "plt.gca().yaxis.set_major_formatter(FuncFormatter(lambda x, _: f'{int(x):,}'))\n",
         "plt.tight_layout()\n",
         "plt.show()"
