refactor cost_modelling.ipynb to enhance clarity in comments and descriptions throughout the analysis steps

--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -742,7 +742,7 @@
         }
       ],
       "source": [
-        "# STEP 1: Load results from previous analyses\n",
+        "# STEP 1: Load results from previous analyses using Geopandas\n",
         "# The file contains the proximity, coverage, demand, fiber path and visibility analyses\n",
         "merged_results = gpd.read_file(\"https://zstagigaprodeuw1.blob.core.windows.net/gigainframapkit-public-container/namibia/merged_namibia.geojson\")\n",
         "\n",
@@ -787,7 +787,7 @@
         }
       ],
       "source": [
-        "# We can quickly plot the merged_results GeoDataFrame to see the locations of schools\n",
+        "# We can quickly plot the merged_results GeoDataFrame to see the locations of schools using the plot() method\n",
         "merged_results.plot()"
       ]
     },
@@ -840,7 +840,7 @@
         "feasibility = merged_results.copy()\n",
         "\n",
         "# Check if FIBER is possible:\n",
-        "# Convert max allowed length from km to meters and compare with actual distance to fiber node\n",
+        "# Create a boolean column (True/False) based on the distance to the nearest fiber node\n",
         "feasibility[\"fiber_feasible\"] = feasibility[\"fiber_node_distance\"] <= fiber_max_length*1000\n",
         "\n",
         "# Check if CELLULAR (P2AREA) is possible:\n",
@@ -848,7 +848,7 @@
         "feasibility[\"p2area_feasible\"] = feasibility[\"coverage\"]\n",
         "\n",
         "# Check if POINT-TO-POINT (P2P) is possible:\n",
-        "# Use line-of-sight visibility information (True/False)\n",
+        "# Use existing line-of-sight visibility information (True/False)\n",
         "feasibility[\"p2p_feasible\"] = feasibility[\"visible\"]\n",
         "\n",
         "# Check if SATELLITE is possible:\n",
@@ -1180,7 +1180,8 @@
         }
       ],
       "source": [
-        "# Display feasibility\n",
+        "# Display feasibility, showing the first few rows\n",
+        "# We have four boolean (True/False) columns, one for each technology\n",
         "feasibility.head()"
       ]
     },
@@ -1681,6 +1682,7 @@
       ],
       "source": [
         "# Display costs\n",
+        "# Here, fiber cost does not vary by length of fiber required\n",
         "costs"
       ]
     },
@@ -1744,7 +1746,7 @@
         "id": "Pb_si7df8aiy"
       },
       "source": [
-        "Then, we compare the revenues associated with each school and technology pair. In this chart below, each dot represents a school. Within each technology, schools with a higher number of users have a higher revenue and schools where the technology is not feasible do not appear in the chart."
+        "Then, we compare the revenues associated with each school and technology pair. In this chart below, each dot represents a profit for a school and the bar is the median. Within each technology, schools with a higher number of users have a higher revenue and schools where the technology is not feasible do not appear in the chart."
       ]
     },
     {
@@ -1834,7 +1836,8 @@
         "                'p2p_net_revenue', 'satellite_net_revenue']\n",
         "\n",
         "# For each school, find which technology gives the highest revenue\n",
-        "# Then clean up the name by removing '_net_revenue' from the end\n",
+        "# The idxmax function returns the column name with the highest value\n",
+        "# Then we clean up the column by removing '_net_revenue' from the end\n",
         "net_revenues['technology'] = net_revenues[revenue_cols].idxmax(axis=1).str.replace('_net_revenue', '')\n",
         "\n",
         "# STEP 2: Handle schools with no viable options\n",
@@ -1843,7 +1846,7 @@
         "# For these schools, mark them as \"unconnected\"\n",
         "net_revenues.loc[mask, 'technology'] = \"unconnected\"\n",
         "\n",
-        "# STEP 3: Add cost information for each school's selected technology\n",
+        "# STEP 3: Add cost information for each school's selected technology, so everything is in the same table\n",
         "# First reset the index to make school_id a regular column\n",
         "# Then merge with costs table based on the selected technology\n",
         "# Finally, put school_id back as the index\n",
