add code snippets to inspect data types and select specific rows and columns in cost_modelling.ipynb

--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -755,6 +755,39 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# We can inspect the data types in the dataframe\n",
+        "# cell_site_distance, fiber_node_distance and population_1km are float64 (numerical)\n",
+        "# coverage and visible are bool (`True` or `False`)\n",
+        "# geometry is geometry (a geospatial column type)\n",
+        "merged_results.dtypes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# To select column 'coverage', use square brackets\n",
+        "merged_results['coverage']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# To select the row for school 1, use .loc and square bracketswith the index\n",
+        "merged_results.loc[1]"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 4,
       "metadata": {
         "colab": {
