update get_ookla_data.ipynb to specify data types for downloading mobile and fixed data

--- a/get_ookla_data.ipynb
+++ b/get_ookla_data.ipynb
@@ -732,9 +732,18 @@
         "# Create output directory\n",
         "output_dir = create_output_directory()\n",
         "\n",
-        "# Download data\n",
+        "# Download mobile data\n",
         "download_ookla_data(\n",
-        "    data_type=data_params[\"data_type\"].value,\n",
+        "    data_type=\"mobile\",\n",
+        "    year=data_params[\"year\"].value,\n",
+        "    quarter=data_params[\"quarter\"].value,\n",
+        "    bounds=bounds,\n",
+        "    output_path=output_dir\n",
+        ")\n",
+        "\n",
+        "# Download fixed data\n",
+        "download_ookla_data(\n",
+        "    data_type=\"fixed\",\n",
         "    year=data_params[\"year\"].value,\n",
         "    quarter=data_params[\"quarter\"].value,\n",
         "    bounds=bounds,\n",
