Enhance popup content in cost_modelling.ipynb for CircleMarker to display additional details

--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -1209,6 +1209,15 @@
         "\n",
         "    for _, row in points_gdf.iterrows():\n",
         "        color = color_map.get(row.technology, '#808080')  # gray for NaN\n",
+        "        popup_content = (\n",
+        "            f\"ID: {row.name}<br>\"\n",
+        "            f\"Technology: {row.technology}<br>\"\n",
+        "            f\"Cell Site Distance: {row.cell_site_distance:.2f} km<br>\"\n",
+        "            f\"Fiber Node Distance: {row.fiber_node_distance:.2f} km<br>\"\n",
+        "            f\"Coverage: {row.coverage}<br>\"\n",
+        "            f\"Population (1km): {row.population_1km:,.0f}<br>\"\n",
+        "            f\"Visible: {row.visible}\"\n",
+        "        )\n",
         "        folium.CircleMarker(\n",
         "            location=[row.geometry.y, row.geometry.x],\n",
         "            radius=5,\n",
@@ -1217,7 +1226,7 @@
         "            fill=True,\n",
         "            fill_color=color,\n",
         "            fill_opacity=0.7,\n",
-        "            popup=f\"ID: {row.name}<br>Technology: {row.technology}\"\n",
+        "            popup=popup_content\n",
         "        ).add_to(points_group)\n",
         "\n",
         "    points_group.add_to(m)\n",
