Update cost_modelling.ipynb to include coverage_4G in technology selection plot

--- a/cost_modelling.ipynb
+++ b/cost_modelling.ipynb
@@ -1248,7 +1248,7 @@
       "outputs": [],
       "source": [
         "# Plot the technology selection\n",
-        "m = plot_points_by_technology(technology_selection, color_map, None, title=\"Schools by Selected Technology\", zoom=6)\n",
+        "m = plot_points_by_technology(technology_selection, color_map, coverage_4G, title=\"Schools by Selected Technology\", zoom=6)\n",
         "display(m)"
       ]
     },
