--- a/get_ookla_data.ipynb
+++ b/get_ookla_data.ipynb
@@ -750,6 +750,77 @@
         "    output_path=output_dir\n",
         ")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Unzip OpenCellID files"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import geopandas as gpd\n",
+        "import gzip\n",
+        "import shutil"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def unzip_gz(gz_file_path, output_path=None):\n",
+        "    \"\"\"\n",
+        "    Unzips a .gz file and returns the path to the unzipped file.\n",
+        "\n",
+        "    Args:\n",
+        "        gz_file_path (str): Path to the .gz file\n",
+        "        output_path (str): Path for the output file.\n",
+        "\n",
+        "    Returns:\n",
+        "        str: Path to the unzipped file\n",
+        "    \"\"\"\n",
+        "    # Create output directory if it doesn't exist\n",
+        "    output_dir = os.path.dirname(output_path)\n",
+        "    if output_dir and not os.path.exists(output_dir):\n",
+        "        os.makedirs(output_dir)\n",
+        "\n",
+        "    # Unzip the file\n",
+        "    with gzip.open(gz_file_path, 'rb') as f_in:\n",
+        "        with open(output_path, 'wb') as f_out:\n",
+        "            shutil.copyfileobj(f_in, f_out)\n",
+        "\n",
+        "    return output_path"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "location_of_gz_file = \"/content/626.csv.gz\"\n",
+        "unzipped_cell_sites = unzip_gz(location_of_gz_file,\"/content/cell_sites.csv\")\n",
+        "cell_sites = pd.read_csv(unzipped_cell_sites, header=None,\n",
+        "                        names = ['radio', 'mcc', 'net', 'area', 'cell', 'unit', 'lon', 'lat',\n",
+        "                                'range', 'samples', 'changeable', 'created', 'updated', 'averageSignal'])\n",
+        "cell_sites_gdf = gpd.GeoDataFrame(cell_sites, geometry=gpd.points_from_xy(cell_sites.lon, cell_sites.lat), crs=\"EPSG:4326\").drop(columns=[\"lon\", \"lat\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cell_sites_gdf.to_file(\"/content/cell_sites.geojson\", driver='GeoJSON')"
+      ]
     }
   ],
   "metadata": {
@@ -759,11 +830,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "giga-inframapkit-env",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.11"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
