Restore commented-out code in get_ookla_data.ipynb for cell site data processing

--- a/get_ookla_data.ipynb
+++ b/get_ookla_data.ipynb
@@ -805,12 +805,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# location_of_gz_file = \"/content/626.csv.gz\"\n",
-        "# unzipped_cell_sites = unzip_gz(location_of_gz_file,\"/content/cell_sites.csv\")\n",
-        "# cell_sites = pd.read_csv(unzipped_cell_sites, header=None,\n",
-        "#                         names = ['radio', 'mcc', 'net', 'area', 'cell', 'unit', 'lon', 'lat',\n",
-        "#                                 'range', 'samples', 'changeable', 'created', 'updated', 'averageSignal'])\n",
-        "# cell_sites_gdf = gpd.GeoDataFrame(cell_sites, geometry=gpd.points_from_xy(cell_sites.lon, cell_sites.lat), crs=\"EPSG:4326\").drop(columns=[\"lon\", \"lat\"])"
+        "location_of_gz_file = \"/content/626.csv.gz\"\n",
+        "unzipped_cell_sites = unzip_gz(location_of_gz_file,\"/content/cell_sites.csv\")\n",
+        "cell_sites = pd.read_csv(unzipped_cell_sites, header=None,\n",
+        "                        names = ['radio', 'mcc', 'net', 'area', 'cell', 'unit', 'lon', 'lat',\n",
+        "                                'range', 'samples', 'changeable', 'created', 'updated', 'averageSignal'])\n",
+        "cell_sites_gdf = gpd.GeoDataFrame(cell_sites, geometry=gpd.points_from_xy(cell_sites.lon, cell_sites.lat), crs=\"EPSG:4326\").drop(columns=[\"lon\", \"lat\"])"
       ]
     },
     {
@@ -819,7 +819,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# cell_sites_gdf.to_file(\"/content/cell_sites.geojson\", driver='GeoJSON')"
+        "cell_sites_gdf.to_file(\"/content/cell_sites.geojson\", driver='GeoJSON')"
       ]
     }
   ],
